CRASH-160 : Tolerate malformed jar URLs